# afk

./: .gitignore  .lychee.toml  AGENTS.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  USAGE.md  build.rs  pyproject.toml
.beads/: issues.jsonl
.cursor/rules/: backwardscompat.mdc  beads.mdc
.github/workflows/: build.yml  ci.yml  code-review.yml  doc-review.yml  docs-review.yml  docs.yml  release.yml  rust-ci.yml  rust-release.yml
_legacy/: README.md  pyproject.toml
_legacy/python-src/: art.py  cli.py  config.py  feedback.py  file_watcher.py  git_ops.py  output.py  output_parser.py  prd.py  prd_store.py  runner.py
_legacy/python-src/sources/: __init__.py
_legacy/python-tests/: test_art.py  test_bootstrap.py  test_config.py  test_file_watcher.py  test_output_parser.py  test_progress.py  test_prompt.py  test_sources_github.py
afk-rust/: .gitignore  Cargo.toml
afk-rust/benches/: benchmarks.rs
afk-rust/src/: lib.rs  main.rs
afk-rust/src/bootstrap/: mod.rs
afk-rust/src/cli/: mod.rs  output.rs  update.rs
afk-rust/src/cli/commands/: mod.rs  prd.rs  source.rs
afk-rust/src/config/: mod.rs
afk-rust/src/feedback/: art.rs  display.rs  mod.rs
afk-rust/src/git/: mod.rs
afk-rust/src/parser/: mod.rs
afk-rust/src/prd/: mod.rs  parse.rs  store.rs
afk-rust/src/progress/: limits.rs  mod.rs
afk-rust/src/prompt/: mod.rs  template.rs
afk-rust/src/runner/: controller.rs  iteration.rs  mod.rs  output_handler.rs  quality_gates.rs
afk-rust/src/sources/: beads.rs  github.rs  json.rs  mod.rs
afk-rust/src/watcher/: mod.rs
afk-rust/tests/: cli_integration.rs  prompt_snapshots.rs
benches/: benchmarks.rs
docs/: architecture.md  cli-review.md  code-review.md  user-guide.md
docs/inspiration/: readme.md
docs/misc/: article-draft.md
docs/prds/: feedback.md  installer.md  rust-rewrite-tasks.json  rust-rewrite.md  standup.md  workflow-prd.json
docs/prds/archive/: code-review-2026-01.md
examples/sandbox/: .gitignore  AGENTS.md  PRD-markdown.md  PRD-memory.md  PRD-palette.md  PRD.md  README.md  app.js  index.html  pyproject.toml  script.js  styles.css
examples/sandbox/.beads/: issues.jsonl
examples/sandbox/src/todo/: __init__.py  app.py  models.py
examples/sandbox/tests/: __init__.py  test_todo.py
scripts/: install.ps1  install.sh  validate-examples.sh  validate-structure.sh
src/: lib.rs  main.rs  path_matcher.rs
src/afk/: __init__.py  art.py  bootstrap.py  cli.py  config.py  feedback.py  file_watcher.py  git_ops.py  learnings.py  output_parser.py  prd.py  prd_store.py  progress.py  prompt.py  runner.py
src/afk/sources/: __init__.py  beads.py  github.py  json_prd.py  markdown.py
src/bootstrap/: mod.rs
src/cli/: mod.rs  output.rs  update.rs
src/cli/commands/: archive.rs  completions.rs  config.rs  go.rs  import.rs  init.rs  mod.rs  prd.rs  progress_cmd.rs  prompt.rs  source.rs  status.rs  task.rs  use_cli.rs  verify.rs
src/config/: field.rs  metadata.rs  mod.rs  validation.rs
src/feedback/: art.rs  celebration.rs  display.rs  metrics.rs  mod.rs  spinner.rs
src/git/: mod.rs
src/parser/: mod.rs  stream_json.rs
src/prd/: mod.rs  parse.rs  parse_template.md  store.rs
src/progress/: archive.rs  limits.rs  mod.rs
src/prompt/: default.md  mod.rs  template.rs
src/runner/: controller.rs  iteration.rs  mod.rs  output_handler.rs  quality_gates.rs  sleep_guard.rs
src/sources/: beads.rs  github.rs  json.rs  markdown.rs  mod.rs  openspec.rs
src/tui/: app.rs  mod.rs  ui.rs
src/watcher/: mod.rs
tests/: __init__.py  cli_integration.rs  conftest.py  prompt_snapshots.rs  test_art.py  test_bootstrap.py  test_cli.py  test_config.py  test_feedback.py  test_file_watcher.py  test_git_ops.py  test_learnings.py  test_output.py  test_output_parser.py  test_prd.py  test_progress.py  test_prompt.py  test_runner.py  test_sources.py  test_sources_beads.py  test_sources_github.py  test_sources_json.py  test_sources_markdown.py
