[package]
name = "afk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Autonomous AI coding loops - Ralph Wiggum style"
license = "MIT"
authors = ["Rob MacDonald"]
keywords = ["ai", "coding", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/m0nkmaster/afk"
readme = "README.md"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4.5"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for parsing
regex = "1.11"
toml = "0.9.11"

# Template engine
tera = "1.20"

# Clipboard support
arboard = "3.4"

# Signal handling
ctrlc = "3.4"

# File system watching
notify = "6.1"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# HTTP client for self-update
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "afk"
path = "src/main.rs"

[lib]
name = "afk"
path = "src/lib.rs"
