[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afk"
version = "0.2.0"
description = "Autonomous AI coding loops - Ralph Wiggum style"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rob MacDonald" }
]
keywords = ["ai", "coding", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
afk = "afk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/afk"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# N815: mixedCase field names are intentional for JSON serialisation compatibility
per-file-ignores = { "src/afk/prd_store.py" = ["N815"] }

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["examples/sandbox/"]
# Allow untyped dicts in test fixtures
disallow_any_generics = false
# Ignore missing stubs for third-party libs
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=afk",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/afk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
