[package]
name = "afk"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
description = "Autonomous AI coding loops - Ralph Wiggum style"
license = "MIT"
authors = ["Rob MacDonald"]
keywords = ["ai", "coding", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/robo-mac/afk"
readme = "../README.md"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for parsing
regex = "1.11"
toml = "0.9.11"

# Template engine
tera = "1.20"

# Clipboard support
arboard = "3.4"

[dev-dependencies]
tempfile = "3.15"

[[bin]]
name = "afk"
path = "src/main.rs"

[lib]
name = "afk"
path = "src/lib.rs"
